added devise auth

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -35,6 +35,6 @@
   <div class="container">
     <h1>HealthyEats</h1>
     <p>Because life is to short to diet without tasty food</p>
-    <p><a class="btn btn-primary btn-lg">Get Started</a></p>
+    <%= link_to '<i class="btn btn-primary btn-lg">Get Started</i>'.html_safe, 'https://www.google.com' %>
   </div>
 </div>
