--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,16 +17,11 @@
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#">Link</a></li>
-      <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </li>
+      <% if user_signed_in? %>
+      <li>Signed in as <%= current_user.email %></li>
+      <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+      
+      <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
