--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,3 +1,8 @@
+<head>
+<%= stylesheet_link_tag "session" %>
+</head>
+<div class="jumbotron">
+  <div class="container">
 <h2>Resend confirmation instructions</h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
@@ -10,3 +15,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+</div>
