--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -29,8 +29,6 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-    <h1>HealthyEats</h1>
-    <p>Because life is to short to diet without tasty food</p>
-    <%= link_to '<i class="btn btn-primary btn-lg">Get Started</i>'.html_safe, restaurants_path %>
+    <%= gmaps(:map_options => {:detect_location => true, :center_on_user => true, :auto_zoom => false, :zoom => 12, :auto_adjust => true}) %>
   </div>
 </div>
