--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -29,7 +29,7 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-    <h2>Name: <%= @restaurant.name %></h2>
+    <h2>Address: <%= @restaurant.address %></h2>
     <h2>Longitude: <%= @restaurant.longitude %></h2>
     <h2>Latitude: <%= @restaurant.latitude %></h2>
   </div>
