--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -32,6 +32,7 @@
     <h2>Name: <%= @restaurant.name %></h2>
     <h2>Longitude: <%= @restaurant.longitude %></h2>
     <h2>Latitude: <%= @restaurant.latitude %></h2>
+    <h2>City: <%= @restaurant.city %></h2>
   </div>
 </div>
 
