--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -33,6 +33,7 @@
     <h2>Longitude: <%= @restaurant.longitude %></h2>
     <h2>Latitude: <%= @restaurant.latitude %></h2>
     <h2>City: <%= @restaurant.city %></h2>
+    <h2><%= @restaurant.address %></h2>
   </div>
 </div>
 
