--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -29,24 +29,12 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-   <% if @restaurant.errors.any? %>
-  <h2>There were errors saving your restaurant</h2>
-  <ul>
-    <% @restaurant.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+    <%= form_tag("/restaurants/search", method: "get") do %>
+    <%= label_tag(:name, "Restaurant Name:") %>
+    <%= text_field_tag(:name) %>
+    <%= label_tag(:city, "City:") %>
+    <%= text_field_tag(:city) %>
+    <%= submit_tag("Search") %>
     <% end %>
-  </ul>
-<% end %>
-
-
-    <%= form_for @restaurant do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-    <%= f.submit %>
-    <% end %>
-
-
   </div>
 </div>
