--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -39,14 +39,14 @@
 <% end %>
 
 
-    <%= form_for @restaurant do |f| %>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-    <%= f.label :city %>
-    <%= f.text_field :city %>
-    <%= f.submit %>
+    <%= form_tag("/restaurants/new", method: "get") do %>
+    <%= label_tag(:name, "Restaurant name:") %>
+    <%= text_field_tag(:name) %>
+    <%= label_tag(:city, "City:") %>
+    <%= text_field_tag(:city) %>
+    <%= submit_tag("Search") %>
     <% end %>
 
-
+    <%= @name %>
   </div>
 </div>
