--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -29,7 +29,7 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-
+    <%= @restaurant_results %>
   </div>
 </div>
 
