--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -39,20 +39,18 @@
                 <img class="media-object" src=<%= @restaurant.image_url %>>
               </a>
               <div class="media-body">
-                <h4 class="media-heading"><%= @restaurant.name%></h4>
+                <h2 class="media-heading"><%= @restaurant.name%></h2>
                 <p><span class="label label-info">Yelp Rating:</span> <span class="label label-success"><%= "#{@restaurant.yelp_rating} / 5" %></span></p>
-                <p>
-                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-comment"></span> Message</a>
-                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-heart"></span> Favorite</a>
-                  <a href="#" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-ban-circle"></span> Unfollow</a>
-                </p>
+		<h4><%= @restaurant.address %></h4>
+		<div class="btn-group">
+		  <%= link_to "Add new meal", new_meal_path, :class =>"btn btn-danger btn-large" %>
+		</div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    
+    </div> <!-- End of restaurant profile head -->
   </div>
 </div>
 
