--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -35,7 +35,8 @@
     <%= f.text_field :name %></br>
     <%= f.label :description %>
     <%= f.text_area :description %>
-    <%= f.hidden_field :restaurant_id, value: @restaurant_id %></br>
+    <%= f.hidden_field :restaurant_id, value: @restaurant_id %>
+    <%= f.hidden_field :user_id, value: @user_id %>
     <%= f.submit %>
     <% end %>
 
