--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -51,6 +51,23 @@
         </div>
       </div>
     </div> <!-- End of restaurant profile head -->
+    
+    <h1>Saved Meals</h1>
+    <table class="table table-hover">
+      <tr>
+	<td><h3>Name</h3></td>
+	<td><h3>Description</h3></td>
+	<td><h3>Estimated Calories</h3></td>
+      </tr>
+      <% @restaurant.meals.each do |meal| %>
+      <tr>
+	<td><%= meal.name %></td>
+	<td><%= meal.description %></td>
+	<td><%= meal.calories %></td>
+      </tr>
+      <% end %>
+    </table>
+    
   </div>
 </div>
 
