--- a/app/views/restaurants/home.html.erb
+++ b/app/views/restaurants/home.html.erb
@@ -13,7 +13,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Home", home_path %></li>
+      <li class="active"><a href="#">Home</a></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
     </ul>
     
@@ -30,26 +30,36 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
+    <div class="btn-group index-btn">
+      <%= link_to "Add new Restaurant", restaurants_search_path, :class => "btn btn-info btn-large" %>
+    </div>
 
-    <% if @meal.errors.any? %>
-    <h2>There were errors saving your meal</h2>
-    <ul>
-      <% @meal.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
+    <table class="table table-hover">
+      <tr class="header">
+	<td><h4>#</h4></td>
+	<td><h4>Restaurant</h4></td>
+	<td><h4>Address</h4></td>
+	<td><h4>Yelp Rating</h4></td>
+	<td></td>
+      </tr>
+      <% count = 0 %>
+      <% @restaurants.each do |restaurant| %>
+      <% count += 1 %>
+      <tr>
+	<td><h4><%= count %></h4></td>
+	<td><h4><%= restaurant.name %></h4></td>
+	<td><h4><%= restaurant.address %></h4></td>
+	<td><h4><%= restaurant.yelp_rating %></h4></td>
+	<td><h4><%= link_to "View meals", restaurant_path(restaurant) %></h4></td>
+      </tr>
       <% end %>
-    </ul>
-    <% end %>
+    </table>
 
-    <%= form_for @meal do |f| %>
-    <%= f.label :name, "Meal Name:" %>
-    <%= f.text_field :name %></br>
-    <%= f.label :description %>
-    <%= f.text_area :description %></br>
-    <%= f.label :calories, "Estimated Calories:" %>
-    <%= f.text_field :calories %></br>
-    <%= f.submit %>
+    <% if @restaurants.count != 0 %>
+    <%= gmaps4rails(@json) %>
+    <% else %>
+    <%= gmaps(:map_options => {:detect_location => true, :center_on_user => true, :auto_zoom => false, :zoom => 15, :auto_adjust => true}) %>
     <% end %>
-
   </div>
 </div>
 
