--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -13,7 +13,8 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Home", restaurants_path %></li>
+      <li><%= link_to "Home", home_path %></li>
+      <li><%= link_to "My Restaurants", restaurants_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
