--- a/app/views/restaurants/home.html.erb
+++ b/app/views/restaurants/home.html.erb
@@ -33,28 +33,16 @@
     <div class="btn-group index-btn">
       <%= link_to "Add new Restaurant", restaurants_search_path, :class => "btn btn-info btn-large" %>
     </div>
+    <h2>Find bookmarked restaurants near:</h2>
+    <%= form_tag home_path, method: "get" do %>
+    <%= label_tag "Zipcode:" %>
+    <%= text_field_tag "zipcode" %>
+    <%= submit_tag "Submit" %>
+    <% end %>
 
-    <table class="table table-hover">
-      <tr class="header">
-	<td><h4>#</h4></td>
-	<td><h4>Restaurant</h4></td>
-	<td><h4>Address</h4></td>
-	<td><h4>Yelp Rating</h4></td>
-	<td></td>
-      </tr>
-      <% count = 0 %>
-      <% @restaurants.each do |restaurant| %>
-      <% count += 1 %>
-      <tr>
-	<td><h4><%= count %></h4></td>
-	<td><h4><%= restaurant.name %></h4></td>
-	<td><h4><%= restaurant.address %></h4></td>
-	<td><h4><%= restaurant.yelp_rating %></h4></td>
-	<td><h4><%= link_to "View meals", restaurant_path(restaurant) %></h4></td>
-      </tr>
-      <% end %>
-    </table>
-
+    <% unless @search_zip.nil? %>
+    <%= @near_restaurants %>
+    <% end %>
 
   </div>
 </div>
