Adding meal index view

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -13,9 +13,9 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><%= link_to "Home", home_path %></li>
+      <li><%= link_to "Home", home_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
-      <li><%= link_to "My Meals", meals_path %></li>
+      <li class="active"><%= link_to "My Meals", meals_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
@@ -31,27 +31,6 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-
-    <% if @meal.errors.any? %>
-    <h2>There were errors saving your meal</h2>
-    <ul>
-      <% @meal.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-      <% end %>
-    </ul>
-    <% end %>
-
-    <%= form_for @meal do |f| %>
-    <%= f.label :name, "Meal Name:" %>
-    <%= f.text_field :name %></br>
-    <%= f.label :description %>
-    <%= f.text_area :description %></br>
-    <%= f.label :calories, "Estimated Calories:" %>
-    <%= f.text_field :calories %></br>
-    <%= f.hidden_field :restaurant_id, value: @restaurant_id %>
-    <%= f.hidden_field :user_id, value: @user_id %>
-    <%= f.submit %>
-    <% end %>
 
   </div>
 </div>
