--- a/app/views/restaurants/home.html.erb
+++ b/app/views/restaurants/home.html.erb
@@ -15,13 +15,13 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to "Home", root_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
+      <li><%= link_to "My Meals", meals_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
       <li><a>Signed in as <%= current_user.email %></a></li>
       <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-      
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
@@ -42,7 +42,11 @@
     <% end %>
 
     <% unless @search_zip.nil? %>
+    <% if @near_restaurants.empty? %>
+    <h2>No results found</h2>
+    <% else %>
     <%= @near_restaurants %>
+    <% end %>
     <% end %>
     
   </div>
