--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -15,6 +15,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><%= link_to "Home", home_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
+      <li><%= link_to "My Meals", meals_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
