--- a/app/views/restaurants/search.html.erb
+++ b/app/views/restaurants/search.html.erb
@@ -1,3 +1,16 @@
+<head>
+  <script>
+    $(document).ready(function(){
+       $("#form").submit(function(){
+               if ( $("#form #name").val().length == 0 || $("#form #city").val().length == 0 ) {
+               alert("Input cannot be empty");
+               window.location.reload();
+               return false;
+             }
+       });
+    });
+  </script>
+</head>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -32,12 +45,12 @@
 <div class="jumbotron">
   <div class="container">
 
-    <%= form_tag("/restaurants/new", method: "get") do %>
+    <%= form_tag("/restaurants/new", method: "get", :id => "form") do %>
     <%= label_tag(:name, "Restaurant name:") %>
     <%= text_field_tag(:name) %>
     <%= label_tag(:city, "City:") %>
     <%= text_field_tag(:city) %>
-    <%= submit_tag("Search") %>
+    <%= submit_tag("Search", :id => "submit") %>
     <% end %>
 
   </div>
