--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -33,22 +33,22 @@
   <div class="container">
 
     <% if @meal.errors.any? %>
-    <h2>There were errors saving your meal</h2>
-    <ul>
-      <% @meal.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-      <% end %>
-    </ul>
+       <h2>There were errors saving your meal</h2>
+       <ul>
+	 <% @meal.errors.full_messages.each do |msg| %>
+	 <li><%= msg %></li>
+	 <% end %>
+       </ul>
     <% end %>
 
     <%= form_for @meal do |f| %>
-    <%= f.label :name, "Meal Name:" %>
-    <%= f.text_field :name %></br>
-    <%= f.label :description %>
-    <%= f.text_area :description %></br>
-    <%= f.label :calories, "Estimated Calories:" %>
-    <%= f.text_field :calories %></br>
-    <%= f.submit %>
+       <%= f.label :name, "Meal Name:" %>
+       <%= f.text_field :name %><br/>
+       <%= f.label :description %>
+       <%= f.text_area :description %><br/>
+       <%= f.label :calories, "Estimated Calories:" %>
+       <%= f.text_field :calories %></br/>
+       <%= f.submit %>
     <% end %>
 
   </div>
