--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -35,20 +35,22 @@
       <tr>
 	<td><h3>#</h3></td>
 	<td><h3>Meal</h3></td>
+	<td><h3>Restaurant</h3></td>
 	<td><h3>Description</h3></td>
 	<td><h3>Estimated Calories</h3></td>
 	<td></td>
 	<% count = 0 %>
 	<% @meals.each do |meal| %>
-	<% count += 1 %>
-	<tr>
-	  <td><%= count %></td>
-	  <td><%= meal.name %></td>
-	  <td><%= meal.description %></td>
-	  <td><%= meal.calories %></td>
-	  <td><%= link_to "Edit", edit_meal_path(meal) %></td>
-	</tr>
-             <% end %>
+	    <% count += 1 %>
+            <tr>
+	      <td><%= count %></td>
+	      <td><%= meal.name %></td>
+	      <td><%= link_to "#{meal.restaurant.name}", restaurant_path(meal.restaurant.id) %></td>
+	      <td><%= meal.description %></td>
+	      <td><%= meal.calories %></td>
+	      <td><%= link_to "Edit", edit_meal_path(meal) %></td>
+	    </tr>
+        <% end %>
       </tr>
     </table>
   </div>
