--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -43,7 +43,7 @@
     <%= form_for @meal do |f| %>
     <%= f.label :name, "Meal Name:" %>
     <%= f.text_field :name %></br>
-    <%= f.label :description %>
+    <%= f.label :description, "Description:" %>
     <%= f.text_area :description %></br>
     <%= f.label :calories, "Estimated Calories:" %>
     <%= f.text_field :calories %></br>
