--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -30,6 +30,11 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
+    <div class="container">
+    <div class="btn-group index-btn">
+      <%= link_to "Add new Restaurant", restaurants_search_path, :class => "btn-large btn-success" %>
+    </div>
+    </div>
     <h2>My Restaurants</h2>
     <table class="table table-hover">
       <tr>
