--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -31,9 +31,7 @@
 <div class="jumbotron">
   <div class="container">
     <div class="container">
-    <div class="btn-group index-btn">
-      <%= link_to "Add new Restaurant", restaurants_search_path, :class => "btn-large btn-success" %>
-    </div>
+      <%= link_to "<button class='btn-large btn-success'>Add new Restaurant</button>".html_safe, restaurants_search_path %>
     </div>
     <h2>My Restaurants</h2>
     <table class="table table-hover">
