--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,17 +1,3 @@
-<head>
-  <script>
-    <!-- Ensure that form_tag inputs are not empty-->
-    $(document).ready(function(){
-       $("#form").submit(function(){
-           if ( $("#form #name").val().length == 0 || $("#form #city").val().length == 0 ) {
-           alert("Input cannot be empty");
-           window.location.reload();
-           return false;
-           }
-        });
-    });
-  </script>
-</head>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -30,13 +16,13 @@
       <li><%= link_to "Home", home_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
       <li><%= link_to "My Meals", meals_path %></li>
-      <li><%= link_to "About", about_index_path %></li>
+      <li class="active"><%= link_to "About", about_index_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
-         <li><a>Signed in as <%= current_user.email %></a></li>
-         <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+      <li><a>Signed in as <%= current_user.email %></a></li>
+      <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
@@ -45,12 +31,8 @@
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-    <%= form_tag("/restaurants/new", method: "get", :id => "form") do %>
-      <%= label_tag(:name, "Restaurant name:") %>
-      <%= text_field_tag(:name) %>
-      <%= label_tag(:city, "City:") %>
-      <%= text_field_tag(:city) %>
-      <%= submit_tag("Search", :id => "submit") %>
-    <% end %>
+
   </div>
 </div>
+
+
