--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,18 +3,14 @@
 <head>
   <title>HealthyChoicesApp</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= stylesheet_link_tag "gmaps4rails.css" %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "gmaps4rails.base.js" %>
-  <%= javascript_include_tag "gmaps4rails.bing.js" %>
-  <%= javascript_include_tag "gmaps4rails.googlemaps.js" %>
-  <%= javascript_include_tag "gmaps4rails.mapquest.js" %>
-  <%= javascript_include_tag "gmaps4rails.openlayers.js" %>
+  <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+  <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  
   <%= yield %>
-  <%= yield :scripts %>
+
 </body>
 </html>
