--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -16,6 +16,7 @@
       <li><%= link_to "Home", home_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
       <li class="active"><%= link_to "My Meals", meals_path %></li>
+      <li><%= link_to "About", about_index_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
