--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -16,6 +18,7 @@
       <li><%= link_to "Home", home_path %></li>
       <li class="active"><%= link_to "My Restaurants", restaurants_path %></li>
       <li><%= link_to "My Meals", meals_path %></li>
+      <li><%= link_to "About", about_index_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
@@ -56,10 +59,20 @@
     </table>
 
     <% if @restaurants.count != 0 %>
-       <%= gmaps4rails(@json) %>
-    <% else %>
-       <%= gmaps(:map_options => {:detect_location => true, :center_on_user => true, :auto_zoom => false, :zoom => 15, :auto_adjust => true}) %>
-    <% end %>
+       <div style='width: 800px;'>
+	 <div id="map" style='width: 800px; height: 400px;'>
+	 </div>
+       </div>
+       <script type="text/javascript">
+	 handler = Gmaps.build('Google');
+	 handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+	 markers = handler.addMarkers(<%=raw @hash.to_json %>);
+	 handler.bounds.extendWith(markers);
+	 handler.fitMapToBounds();
+	 });
+       </script>
+       <% else %>
+       <% end %>
   </div>
 </div>
 
