--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -16,13 +16,13 @@
       <li class="active"><%= link_to "Home", home_path %></li>
       <li><%= link_to "My Restaurants", restaurants_path %></li>
       <li><%= link_to "My Meals", meals_path %></li>
+      <li><%= link_to "About", about_index_path %></li>
     </ul>
     
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
       <li><a>Signed in as <%= current_user.email %></a></li>
       <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
-      
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
@@ -53,7 +53,7 @@
       </div>
     </div> <!-- End of restaurant profile head -->
     
-    <h1>Saved Meals</h1>
+    <h2>Saved Meals</h2>
     <table class="table table-hover">
       <tr>
 	<td><h3>#</h3></td>
