--- a/app/views/restaurants/home.html.erb
+++ b/app/views/restaurants/home.html.erb
@@ -84,7 +84,18 @@
 		  </tr>
                <% end %>
 	    </table>
-	    <%= gmaps4rails(@json) %>
+	    <div style='width: 800px;'>
+	      <div id="map" style='width: 800px; height: 400px;'>
+	      </div>
+	    </div>
+	    <script type="text/javascript">
+	      handler = Gmaps.build('Google');
+	      handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+	      markers = handler.addMarkers(<%=raw @hash.to_json %>);
+	      handler.bounds.extendWith(markers);
+	      handler.fitMapToBounds();
+	      });
+	    </script>
 	<% end %>
     <% end %>
   </div>
