--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -36,9 +34,13 @@
     <div class="container">
       <%= link_to "<button class='btn-large btn-success'>Add new Restaurant</button>".html_safe, restaurants_search_path %>
     </div>
-    <h2>My Restaurants</h2>
+
+    <div class="table-title">
+	  <h2>My Restaurants</h2>
+    </div>
+
     <table class="table table-hover">
-      <tr>
+      <tr class="table-header">
 	<td><h3>#</h3></td>
 	<td><h3>Restaurant</h3></td>
 	<td><h3>Address</h3></td>
