--- a/app/assets/stylesheets/meals.css.scss
+++ b/app/assets/stylesheets/meals.css.scss
@@ -1,3 +1,31 @@
 // Place all the styles related to the Meals controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.table {
+       margin-top: 15px;
+}
+
+.table-title.idx {
+	background-color: #484848;
+	height: 40px;
+	width: 150px;
+	margin: 0 auto;
+}
+
+.table-title h2 {
+       font-weight: bold;
+       color: white;
+       line-height: 40px; 
+       text-align: center;
+       vertical-align: middle;
+}
+
+.table-header {
+	text-decoration: underline;
+	font-weight: bold;
+}
+
+.table-header h3 {
+	font-weight: bold;
+}
