--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -39,12 +39,12 @@
 	  <h2>My Restaurants</h2>
     </div>
 
-    <table class="table table-hover">
+    <table class="table table-striped">
       <tr class="table-header">
-	<td><h3>#</h3></td>
-	<td><h3>Restaurant</h3></td>
-	<td><h3>Address</h3></td>
-	<td><h3>Yelp Rating</h3></td>
+	<td>#</td>
+	<td>Restaurant</td>
+	<td>Address</td>
+	<td>Yelp Rating</td>
 	<td></td>
       </tr>
       <% count = 0 %>
