Adding content to about page

--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">HealthyEats</a>
+    <a class="navbar-brand" href="#">HealthyChoices</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,11 +27,14 @@
     </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
-
+ 
 <!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
-
+    <div class="hero-unit">
+      <h2 class="about-head">HealthyChoices. Because dieting is hard enough as it is.</h2>
+      <p>Dieters rejoice! No longer will you have to worry about dining out. HealthyChoices allows you to bookmark meals you have eaten at restaurants that won't harm your waistline. With HealthyChoices you can find your bookmarked restaurants near any location you plan to eat out at.</p>
+    </div>
   </div>
 </div>
 
