--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">HealthyEats</a>
+    <a class="navbar-brand" href="#">HealthyChoices</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -33,7 +33,7 @@
 <div class="jumbotron">
   <div class="container">
     <div class="table-title idx">
-      <h2><%= "My meals" %></h2>
+      <h2>My Meals</h2>
     </div>
     <table class="table table-hover">
       <tr class="table-header">
