--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">HealthyEats</a>
+    <a class="navbar-brand" href="#">HealthyChoices</a>
   </div>
 
   <!-- Collect the nav links, forms, and other content for toggling -->
@@ -28,7 +28,7 @@
   </div><!-- /.navbar-collapse -->
 </nav>
 
-n<!-- Home page header -->
+<!-- Home page header -->
 <div class="jumbotron">
   <div class="container">
     <% if @restaurant_results.empty? %>
