--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,6 @@
+<% =begin %>
+  Lots of duplication between index and new in your restaurant views. Use partials to DRY up your code.
+<% =end %>
 <nav class="navbar navbar-default" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
@@ -65,6 +68,9 @@
 	 <div id="map" style='width: 800px; height: 400px;'>
 	 </div>
        </div>
+<% =begin %>
+  Move your javascripts to their own files under app/assets/javascripts/. Trust the asset pipeline! http://guides.rubyonrails.org/asset_pipeline.html
+<% =end %>
        <script type="text/javascript">
 	 handler = Gmaps.build('Google');
 	 handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
